Update rsocket